Ionicons Z-index bug

--- a/src/chrome/settings/settings.css
+++ b/src/chrome/settings/settings.css
@@ -125,6 +125,7 @@ body, html {
   left: 49px;
   right: 0;
   position: absolute;
+  z-index: 5;
 }
 #header-row .profile-img,
 #header-row .ion-android-person {
